--- a/4_Problems/2_02_Pandas Data Cleaning.ipynb
+++ b/4_Problems/2_02_Pandas Data Cleaning.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "f0929e6d",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,31 @@
    "id": "4b8bc3c2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Problem Statement:\n",
+    "Remove rows where the salary_year_avg column has missing values. Display the number of rows before and after removing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6cf33360",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "785741 22003\n"
+     ]
+    }
+   ],
+   "source": [
+    "before=len(df)\n",
+    "df.dropna(subset='salary_year_avg',inplace=True)\n",
+    "after=len(df)\n",
+    "print(before,after)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -68,7 +92,61 @@
    "id": "ae6ad853",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Problem Statement:\n",
+    "# Remove duplicate rows from the DataFrame based on the job_location column. Display the number of rows before and after removing duplicates.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "91ef536b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "785741 17218\n"
+     ]
+    }
+   ],
+   "source": [
+    "before=len(df) \n",
+    "df.drop_duplicates(subset='job_location',inplace=True)\n",
+    "after=len(df)\n",
+    "print(before,after)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "268466aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(785741, 17218)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from datasets import load_dataset\n",
+    "\n",
+    "dataset = load_dataset('lukebarousse/data_jobs')\n",
+    "df = dataset['train'].to_pandas()\n",
+    "\n",
+    "rows_before = df.shape[0]\n",
+    "df_unique = df.drop_duplicates(subset=['job_location'])\n",
+    "rows_after = df_unique.shape[0]\n",
+    "rows_before, rows_after\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -92,7 +170,48 @@
    "id": "b96b4fe1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Problem Statement:\n",
+    "# Fill missing values in the salary_rate column with the string 'Unknown'. Display the first 10 rows of the salary_rate column before and after filling.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "34fbb53f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    None\n",
+      "1    None\n",
+      "2    None\n",
+      "3    None\n",
+      "4    None\n",
+      "5    None\n",
+      "6    None\n",
+      "7    None\n",
+      "8    None\n",
+      "9    None\n",
+      "Name: salary_rate, dtype: object 0    Unknown\n",
+      "1    Unknown\n",
+      "2    Unknown\n",
+      "3    Unknown\n",
+      "4    Unknown\n",
+      "5    Unknown\n",
+      "6    Unknown\n",
+      "7    Unknown\n",
+      "8    Unknown\n",
+      "9    Unknown\n",
+      "Name: salary_rate, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.salary_rate.head(10),df.salary_rate.fillna('Unknown').head(10))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -104,8 +223,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
