--- a/4_Problems/2_09_Pandas Exporting Data.ipynb
+++ b/4_Problems/2_09_Pandas Exporting Data.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "56314e2e",
    "metadata": {},
    "outputs": [],
@@ -40,11 +40,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "21511e09",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Problem Statement:\n",
+    "# Export the DataFrame to a CSV file named data_jobs_export.csv without including the index. \n",
+    "# Inspect the contents of the CSV exported.\n",
+    "\n",
+    "df.to_csv('data_jobs_export.csv',index=False)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -64,11 +70,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "0c108c5d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Problem Statement:\n",
+    "# Filter the DataFrame to include only job postings with 'Data Scientist' in the job_title_short column.\n",
+    "# Export the filtered DataFrame to a CSV file named data_scientist_jobs.csv without including the index.\n",
+    "# Inspect that the CSV has been exported with the correct filtered data.\n",
+    "\n",
+    "filtered_df=df[df.job_title_short=='Data Scientist']\n",
+    "filtered_df.to_csv('data_scientist_jobs.csv',index=False)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,11 +113,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ecee8e56",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Problem Statement:\n",
+    "# Filter the DataFrame to include only job postings with 'New York, NY' in the job_location column.\n",
+    "# Export the filtered DataFrame to an Excel file named new_york_jobs.xlsx without including the index.\n",
+    "# Display the first 5 rows of the filtered DataFrame to confirm the export.\n",
+    "\n",
+    "\n",
+    "filtered_df=df[df.job_location=='New York, NY']\n",
+    "filtered_df.to_excel('new_york_jobs.xlsx',index=False)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -116,7 +139,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python_course",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -130,7 +153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
