--- a/4_Problems/2_10_Pandas Applying Functions.ipynb
+++ b/4_Problems/2_10_Pandas Applying Functions.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5ae69c80",
    "metadata": {},
    "outputs": [],
@@ -43,8 +43,30 @@
    "execution_count": null,
    "id": "83f9136e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    2023-06-16\n",
+       "1    2023-01-14\n",
+       "2    2023-10-10\n",
+       "3    2023-07-04\n",
+       "4    2023-08-07\n",
+       "Name: job_posted_date, dtype: object"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Problem Statement:\n",
+    "# Convert the job_posted_date column to a string format 'YYYY-MM-DD' and create a new column job_posted_date_str.\n",
+    "\n",
+    "df['job_posted_date_str']=df.job_posted_date.dt.strftime('%Y-%m-%d')\n",
+    "df.job_posted_date.apply(lambda date: date.strftime('%Y-%m-%d')).head()\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -64,11 +86,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "730e04c1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>job_posted_date</th>\n",
+       "      <th>days_since_posted</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-06-16 13:44:15</td>\n",
+       "      <td>726</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023-01-14 13:18:07</td>\n",
+       "      <td>879</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023-10-10 13:14:55</td>\n",
+       "      <td>610</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2023-07-04 13:01:41</td>\n",
+       "      <td>708</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023-08-07 14:29:36</td>\n",
+       "      <td>674</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      job_posted_date  days_since_posted\n",
+       "0 2023-06-16 13:44:15                726\n",
+       "1 2023-01-14 13:18:07                879\n",
+       "2 2023-10-10 13:14:55                610\n",
+       "3 2023-07-04 13:01:41                708\n",
+       "4 2023-08-07 14:29:36                674"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Problem Statement:\n",
+    "# Calculate the number of days since each job was posted. Create a new column days_since_posted that contains this value. \n",
+    "# Use the job_posted_date column.\n",
+    "\n",
+    "# Note: You need to import the datetime library and use the datetime module to get the current date using .now().\n",
+    "from datetime import datetime\n",
+    "df['days_since_posted']=df.job_posted_date.apply(lambda x: (datetime.now()-x).days)\n",
+    "df[['job_posted_date','days_since_posted']].head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -88,11 +188,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "56638d70",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>salary_year_avg</th>\n",
+       "      <th>salary_category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>109500.0</td>\n",
+       "      <td>High</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77</th>\n",
+       "      <td>140000.0</td>\n",
+       "      <td>High</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <td>120000.0</td>\n",
+       "      <td>High</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>228222.0</td>\n",
+       "      <td>High</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>109</th>\n",
+       "      <td>89000.0</td>\n",
+       "      <td>Medium</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>785624</th>\n",
+       "      <td>139216.0</td>\n",
+       "      <td>High</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>785641</th>\n",
+       "      <td>150000.0</td>\n",
+       "      <td>High</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>785648</th>\n",
+       "      <td>221875.0</td>\n",
+       "      <td>High</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>785682</th>\n",
+       "      <td>157500.0</td>\n",
+       "      <td>High</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>785692</th>\n",
+       "      <td>157500.0</td>\n",
+       "      <td>High</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>22003 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        salary_year_avg salary_category\n",
+       "28             109500.0            High\n",
+       "77             140000.0            High\n",
+       "92             120000.0            High\n",
+       "100            228222.0            High\n",
+       "109             89000.0          Medium\n",
+       "...                 ...             ...\n",
+       "785624         139216.0            High\n",
+       "785641         150000.0            High\n",
+       "785648         221875.0            High\n",
+       "785682         157500.0            High\n",
+       "785692         157500.0            High\n",
+       "\n",
+       "[22003 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Problem Statement:\n",
+    "# Create a copy of the DataFrame called df_filtered and drop the NaN values for salary_year_avg.\n",
+    "# Then, create a new column salary_category that categorizes the salary_year_avg into three categories: 'Low' for salaries less than 60,000, \n",
+    "# 'Medium' for salaries between 60,000 and 100,000, and 'High' for salaries greater than 100,000.\n",
+    "# Then show the df_filtered DataFrame and the salary_year_avg and salary_category columns.\n",
+    "\n",
+    "df_filtered=df.dropna(subset='salary_year_avg').copy()\n",
+    "df_filtered['salary_category']=df_filtered.salary_year_avg.apply(lambda x: 'Low' if x<60000 else('Medium' if x<100000 else 'High'))\n",
+    "df_filtered[['salary_year_avg','salary_category']]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -104,8 +322,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
