--- a/4_Problems/Blank Python Notebook.ipynb
+++ b/4_Problems/Blank Python Notebook.ipynb
@@ -34,7 +34,8 @@
     "dataset = load_dataset('lukebarousse/data_jobs')\n",
     "df = dataset['train'].to_pandas()\n",
     "\n",
-    "df['job_posted_date'] = pd.to_datetime(df['job_posted_date'])"
+    "df['job_posted_date'] = pd.to_datetime(df['job_posted_date'])\n",
+    "\n"
    ]
   },
   {
